--- a/src/main/resources/static/css/prescriptionListStyles.css
+++ b/src/main/resources/static/css/prescriptionListStyles.css
@@ -93,26 +93,26 @@
     display: block;
 }
 
-/* 추가 스타일 */
-.auth-container {
-    margin-top: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 70px);
-}
+/*!* 추가 스타일 *!*/
+/*.auth-container {*/
+/*    margin-top: 5rem;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    height: calc(100vh - 70px);*/
+/*}*/
 
-.auth-box {
-    background-color: white;
-    padding: 30px;
-    border-radius: 15px;
-    box-shadow: 0.625rem 0.625rem 0.25rem rgba(0, 0, 0, 0.25);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: auto;
-    gap: 20px;
-}
+/*.auth-box {*/
+/*    background-color: white;*/
+/*    padding: 30px;*/
+/*    border-radius: 15px;*/
+/*    box-shadow: 0.625rem 0.625rem 0.25rem rgba(0, 0, 0, 0.25);*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    width: auto;*/
+/*    gap: 20px;*/
+/*}*/
 
 #prescription-container {
     height: 600px;
