--- a/src/main/resources/templates/health/prescriptionList.html
+++ b/src/main/resources/templates/health/prescriptionList.html
@@ -173,7 +173,7 @@
             <div class="prescription-image">
                 <img src="/icons/medicine.png" alt="약 이미지">
             </div>
-            <div class="title" style="font-weight: bold">처방내역</div>
+            <div class="title" style="font-weight: bold; font-size: x-large">처방내역</div>
             <div id="prescription-list"></div>
         </div>
     </div>
