--- a/src/main/resources/static/css/reminderStyles.css
+++ b/src/main/resources/static/css/reminderStyles.css
@@ -48,7 +48,7 @@
 .date-btn {
     padding: 4px 8px;
     border-radius: 8px;
-    background-color: #eee;
+    /*background-color: #eee;*/
     cursor: pointer;
     font-weight: bold;
 }
