--- a/src/main/resources/static/css/reminderStyles.css
+++ b/src/main/resources/static/css/reminderStyles.css
@@ -67,6 +67,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 70px;
     padding: 12px 16px;
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
