--- a/src/main/resources/static/css/reminderStyles.css
+++ b/src/main/resources/static/css/reminderStyles.css
@@ -45,7 +45,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
-    gap: 10px;
+    /*gap: 10px;*/
 }
 
 #date-list-wrapper {
