--- a/src/main/resources/static/css/reminderStyles.css
+++ b/src/main/resources/static/css/reminderStyles.css
@@ -10,7 +10,7 @@
 .card {
     background-color: white;
     border-radius: 20px;
-    box-shadow: 4px 6px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0.625rem 0.625rem 0.25rem rgba(0, 0, 0, 0.25);
     padding: 40px 60px;
     width: 420px;
 }
