--- a/src/main/resources/templates/health/reminder.html
+++ b/src/main/resources/templates/health/reminder.html
@@ -16,6 +16,9 @@
         const SS_USER = /*[[${session.SS_USER}]]*/ null;
         const userId = /*[[${reminder.userId}]]*/ null;
         const prescriptionId = /*[[${reminder.prescriptionId}]]*/ null;
+        let reminder = /*[[${reminder}]]*/ null;
+
+        console.log("reminder : ", reminder);
 
         const dateMap = {};
         const monthMap = {};
