--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta lang="en" xmlns:th="http://www.thymeleaf.org">
     <title>메인페이지</title>
     <link rel="stylesheet" href="/css/indexStyles.css">
     <link rel="stylesheet" href="/css/navStyles.css">
