--- a/src/main/resources/templates/health/auth.html
+++ b/src/main/resources/templates/health/auth.html
@@ -1,6 +1,6 @@
 
 
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
