--- a/src/main/resources/templates/health/certificateError.html
+++ b/src/main/resources/templates/health/certificateError.html
@@ -1,6 +1,6 @@
 
 
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script> <!-- JS 경로 수정 -->
     <title>인증 오류</title>
