--- a/src/main/resources/templates/health/reminder.html
+++ b/src/main/resources/templates/health/reminder.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>¼ö약 일정 관리</title>
+    <title>복약 일정 관리</title>
     <link rel="stylesheet" href="/css/authStyles.css">
     <link rel="stylesheet" href="/css/navStyles.css">
     <link rel="stylesheet" href="/css/card.css">
