--- a/src/main/resources/templates/user/email_verification.html
+++ b/src/main/resources/templates/user/email_verification.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>이메일 인증</title>
