--- a/src/main/resources/templates/user/signin.html
+++ b/src/main/resources/templates/user/signin.html
@@ -88,7 +88,7 @@
         <div class="nav-group" id="serviceNav">
             <a href="/health/prescriptionList">처방 내역 조회</a>
             <a href="/health/auth">처방 내역 동기화</a>
-            <a href="#">AI 챗봇 상담</a>
+            <a href="/chat/chat">AI 챗봇 상담</a>
             <a href="#">주변 약국 찾기</a>
         </div>
         <div class="nav-group same_width justify-right" id="beforeLoginNav" th:if="${session.SS_USER == null}">
